src/discrete-layer/views/discrete-layer-view.css
.mainViewContainer {
  display: flex;
  position: relative;
  height: calc(100vh - 52px);
  margin: 0 8px 0 8px;
  padding-bottom: 8px;
  --collapse-expand-duration: 0.5s;
}

.sidePanelParentContainer {
  width: var(--side-panel-width);
  display: flex;
  flex-direction: column;
  transition: width ease-in-out var(--collapse-expand-duration);
}

.secondaryPanel {
  z-index: 1;
  margin: 0 8px;
  width: unset;
}

.sidePanelContainer {
  border-radius: 12px;
}

body[dir='rtl'] .sidePanelContainer {
  margin-right: unset;
  margin-left: 8px;
}

.mapAppContainer {
  left: calc(var(--side-panel-width) + 8px);
  width: calc(calc(100% - var(--side-panel-width)) - 8px);
  position: absolute;
  height: calc(100% - 8px);
  padding-bottom: 8px;
  transition: left ease-in-out var(--collapse-expand-duration),
              right ease-in-out var(--collapse-expand-duration),
              width ease-in-out var(--collapse-expand-duration);
}

body[dir='rtl'] .mapAppContainer {
  right: calc(var(--side-panel-width) + 8px);
  left: unset;
}

.headerContainer {
  height: 52px;
  display: flex;
  align-items: center;
}

.headerViewsSwitcher {
  width: 20%;
  display: flex;
  align-items: center;
}

.headerSearchOptionsContainer {
  margin: 8px auto 0 auto;
  height: 64px;
  z-index: 1;
  background-color: var(--mdc-theme-background);
  border-radius: 64px;
}

.headerSystemAreaContainer {
  width: 10%;
  height: 100%;
  display: flex;
  align-items: center;
  gap: 16px;
  flex-direction: row-reverse;
  padding-right: 16px;
}

body[dir='rtl'] .headerSystemAreaContainer{
  padding-right: unset;
  padding-left: 16px;
}

.headerSystemAreaContainer .avatar {
  background: var(--mdc-theme-gc-selection-background);
}

.alignCenter {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.errorTitle {
  margin: 14px;
}

.errorMessage {
  /* margin: 16px; */
}

.errorDescription {
  margin: 16px;
}

/* TabContent */
.tabHeaderContainer {
  display: flex;
  height: 50px;
}

.tabTitleContainer {
  flex-grow: 1;
  flex-basis: 0;
  background-color: red;
}

.tab-title {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 8px;
}

.tabTitle {
  border-bottom-right-radius: 16px;
  border-bottom-width: 2px;
  border-bottom-color: red;
  border-bottom-style: solid;
  z-index: 1;
  height: 100%;
  display: flex;
  align-items: center;
}

.tabTitleText {
  font-size: 18px;
}

body[dir='rtl'] .tabTitle {
  border-bottom-right-radius: unset;
  border-bottom-left-radius: 16px;
}

.current-client-site-master {
  font-size: 20px;
  color: var(--mdc-theme-gc-site-master);
}

.current-client-site-slave {
  font-size: 20px;
  color: var(--mdc-theme-gc-site-slave);
}

.tabOperationsContainer {
  flex-grow: 2;
  flex-basis: 0;
  border-top-right-radius: 8px;
}

body[dir='rtl'] .tabOperationsContainer {
  border-top-right-radius: unset;
  border-top-left-radius: 8px;
}

.tabOperations {
  border-top-right-radius: 8px;
  border-top-left-radius: 16px;
  border-top-color: red;
  border-top-style: solid;
  background-color: red;
  z-index: 1;
  height: 100%;
  display: flex;
  justify-content: flex-end;
}

.operationIcon {
  padding: 8px 8px;
}

body[dir='rtl'] .tabOperations {
  border-top-right-radius: unset;
  border-top-left-radius: unset;
  border-top-left-radius: 8px;
  border-top-right-radius: 16px;
}

.tabContentContainer {
  padding: 0 0 8px 8px;
  height: 100%;
}

body[dir='rtl'] .tabContentContainer {
  padding: 0 8px 8px 0;
}

.sideDetailsPanel {
  margin-top: 8px;
  padding-left: 20px;
}

body[dir='rtl'] .sideDetailsPanel {
  padding-left: unset;
  padding-right: 20px;
}

.version {
  margin: 0 16px;
}

#newContainer .mdc-menu-surface.mdc-menu-surface--open {
  top: 40px !important;
}

#newContainer {
  display: flex;
}

.tabHeaderContainer .filterByCatalogEntitySelect {
  width: 130px;
  padding: 0 6px 0 6px;
  align-self: center;
  margin-right: auto;
}

body[dir='rtl'] .tabHeaderContainer .filterByCatalogEntitySelect {
  margin-right: unset;
  margin-left: auto;
}

.tabHeaderContainer .mdc-select__anchor {
  height: 2.5rem;
  width: 120px;
  padding: 0 8px 0 8px;
}

.tabHeaderContainer .mdc-select .mdc-select__dropdown-icon {
  margin-left: 0;
  margin-right: 0;
}

.cesium-viewer-fullscreenContainer , .cesium-viewer .bottomToolsContainer {
  z-index: 0;
}

.interactionsDisabled {
  position: relative;
  overflow: hidden;
}

.interactionsDisabled::after{
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0);
  opacity: 0.4;
  z-index: 10;
  cursor: not-allowed;
  user-select: none;
}

/****** BADGE *****/
/* inspired by https://codepen.io/codepenicillin/pen/eYjYmpO */
.position {
  position: relative;
  cursor: pointer;
}
.badge {
  position: absolute;
  top: 8px;
  right: 4px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  min-width: 8px;
  height: 12px;
  padding: 1px 6px 9px 6px;
  border: 3px solid var(--mdc-theme-background);
  border-radius: 500px;
  font-size: 14px;
  font-weight: 600;
  color: #fff;
  text-align: center;
  z-index: 1;
}
.badge_primary{
  background: var(--mdc-theme-primary);
}

